@@ -1,5 +1,6 @@
 package io.quarkus.maven;
 
+import static io.quarkus.generators.ProjectGenerator.BUILD_FILE;
 import static org.fusesource.jansi.Ansi.ansi;
 import static org.twdata.maven.mojoexecutor.MojoExecutor.artifactId;
 import static org.twdata.maven.mojoexecutor.MojoExecutor.configuration;
@@ -14,12 +15,18 @@ import static org.twdata.maven.mojoexecutor.MojoExecutor.version;
 
 import java.io.File;
 import java.io.IOException;
+import java.nio.file.Files;
 import java.util.Arrays;
 import java.util.HashMap;
+import java.util.List;
+import java.util.Locale;
 import java.util.Map;
 import java.util.Objects;
+import java.util.Properties;
 import java.util.Set;
 import java.util.stream.Collectors;
+
+import javax.lang.model.SourceVersion;
 
 import org.apache.commons.lang3.StringUtils;
 import org.apache.maven.execution.DefaultMavenExecutionRequest;
@@ -34,17 +41,24 @@ import org.apache.maven.plugins.annotations.Parameter;
 import org.apache.maven.project.DefaultProjectBuildingRequest;
 import org.apache.maven.project.MavenProject;
 import org.apache.maven.project.ProjectBuilder;
+import org.eclipse.aether.RepositorySystem;
+import org.eclipse.aether.RepositorySystemSession;
+import org.eclipse.aether.repository.RemoteRepository;
 import org.fusesource.jansi.Ansi;
 
+import io.quarkus.bootstrap.resolver.AppModelResolverException;
+import io.quarkus.bootstrap.resolver.maven.MavenArtifactResolver;
 import io.quarkus.cli.commands.AddExtensionResult;
 import io.quarkus.cli.commands.AddExtensions;
 import io.quarkus.cli.commands.CreateProject;
+import io.quarkus.cli.commands.file.BuildFile;
 import io.quarkus.cli.commands.writer.FileProjectWriter;
 import io.quarkus.generators.BuildTool;
 import io.quarkus.generators.SourceType;
 import io.quarkus.maven.components.MavenVersionEnforcer;
 import io.quarkus.maven.components.Prompter;
-import io.quarkus.maven.utilities.MojoUtils;
+import io.quarkus.platform.descriptor.QuarkusPlatformDescriptor;
+import io.quarkus.platform.tools.ToolsUtils;
 
 /**
  * This goal helps in setting up Quarkus Maven project with quarkus-maven-plugin, with sensible defaults
@@ -52,7 +66,7 @@ import io.quarkus.maven.utilities.MojoUtils;
 @Mojo(name = "create", requiresProject = false)
 public class CreateProjectMojo extends AbstractMojo {
 
-    public static final String PLUGIN_KEY = MojoUtils.getPluginGroupId() + ":" + MojoUtils.getPluginArtifactId();
+    final private static boolean IS_WINDOWS = System.getProperty("os.name").toLowerCase(Locale.ROOT).contains("windows");
 
     private static final String DEFAULT_GROUP_ID = "org.acme.quarkus.sample";
 
@@ -68,6 +82,24 @@ public class CreateProjectMojo extends AbstractMojo {
     @Parameter(property = "projectVersion")
     private String projectVersion;
 
+    /**
+     * Group ID of the target platform BOM
+     */
+    @Parameter(property = "platformGroupId", required = false)
+    private String bomGroupId;
+
+    /**
+     * Artifact ID of the target platform BOM
+     */
+    @Parameter(property = "platformArtifactId", required = false)
+    private String bomArtifactId;
+
+    /**
+     * Version of the target platform BOM
+     */
+    @Parameter(property = "platformVersion", required = false)
+    private String bomVersion;
+
     @Parameter(property = "path")
     private String path;
 
@@ -80,8 +112,17 @@ public class CreateProjectMojo extends AbstractMojo {
     @Parameter(property = "extensions")
     private Set<String> extensions;
 
+    @Parameter(property = "outputDirectory", defaultValue = "${basedir}")
+    private File outputDirectory;
+
     @Parameter(defaultValue = "${session}")
     private MavenSession session;
+
+    @Parameter(defaultValue = "${project.remoteProjectRepositories}", readonly = true, required = true)
+    private List<RemoteRepository> repos;
+
+    @Parameter(defaultValue = "${repositorySystemSession}", readonly = true)
+    private RepositorySystemSession repoSession;
 
     @Component
     private Prompter prompter;
@@ -95,13 +136,33 @@ public class CreateProjectMojo extends AbstractMojo {
     @Component
     private ProjectBuilder projectBuilder;
 
+    @Component
+    private RepositorySystem repoSystem;
+
     @Override
     public void execute() throws MojoExecutionException {
+
+        final MavenArtifactResolver mvn;
+        try {
+            mvn = MavenArtifactResolver.builder()
+                    .setRepositorySystem(repoSystem)
+                    .setRepositorySystemSession(repoSession)
+                    .setRemoteRepositories(repos).build();
+        } catch (AppModelResolverException e1) {
+            throw new MojoExecutionException("Failed to initialize Maven artifact resolver", e1);
+        }
+        final QuarkusPlatformDescriptor platform = CreateUtils.setGlobalPlatformDescriptor(bomGroupId, bomArtifactId,
+                bomVersion, mvn, getLog());
+
         // We detect the Maven version during the project generation to indicate the user immediately that the installed
         // version may not be supported.
         mavenVersionEnforcer.ensureMavenVersion(getLog(), session);
-
-        File projectRoot = new File(".");
+        try {
+            Files.createDirectories(outputDirectory.toPath());
+        } catch (IOException e) {
+            throw new MojoExecutionException("Could not create directory " + outputDirectory, e);
+        }
+        File projectRoot = outputDirectory;
         File pom = new File(projectRoot, "pom.xml");
 
         if (pom.isFile()) {
@@ -120,12 +181,10 @@ public class CreateProjectMojo extends AbstractMojo {
 
         } else {
             askTheUserForMissingValues();
-            if (!isDirectoryEmpty(projectRoot)) {
-                projectRoot = new File(projectArtifactId);
-                if (projectRoot.exists()) {
-                    throw new MojoExecutionException("Unable to create the project - the current directory is not empty and" +
-                            " the directory " + projectArtifactId + " exists");
-                }
+            projectRoot = new File(outputDirectory, projectArtifactId);
+            if (projectRoot.exists()) {
+                throw new MojoExecutionException("Unable to create the project, " +
+                        "the directory " + projectRoot.getAbsolutePath() + " already exists");
             }
         }
 
@@ -134,6 +193,10 @@ public class CreateProjectMojo extends AbstractMojo {
             sanitizeExtensions();
             final SourceType sourceType = CreateProject.determineSourceType(extensions);
             sanitizeOptions(sourceType);
+
+            if (className != null && !isClassNameValid(className)) {
+                throw new MojoExecutionException("Unable to create the project, " + className + " is not valid FQCN.");
+            }
 
             final Map<String, Object> context = new HashMap<>();
             context.put("path", path);
@@ -160,31 +223,43 @@ public class CreateProjectMojo extends AbstractMojo {
             File createdDependenciesBuildFile = new File(projectRoot, buildToolEnum.getDependenciesFile());
             File buildFile = new File(createdDependenciesBuildFile.getAbsolutePath());
             if (success) {
-                AddExtensionResult result = new AddExtensions(new FileProjectWriter(buildFile.getParentFile()), buildToolEnum)
+                AddExtensionResult result = new AddExtensions((BuildFile) context.get(BUILD_FILE))
                         .addExtensions(extensions);
                 if (!result.succeeded()) {
                     success = false;
                 }
             }
             if (BuildTool.MAVEN.equals(buildToolEnum)) {
-                createMavenWrapper(createdDependenciesBuildFile);
+                createMavenWrapper(createdDependenciesBuildFile, ToolsUtils.readQuarkusProperties(platform));
             } else if (BuildTool.GRADLE.equals(buildToolEnum)) {
-                createGradleWrapper(buildFile.getParentFile());
+                createGradleWrapper(buildFile.getParentFile(), ToolsUtils.readQuarkusProperties(platform));
             }
         } catch (IOException e) {
-            throw new MojoExecutionException(e.getMessage(), e);
+            throw new MojoExecutionException("Failed to generate Quarkus project", e);
         }
         if (success) {
             printUserInstructions(projectRoot);
         } else {
-            throw new MojoExecutionException("the project was created but it was unable to add the extensions");
+            throw new MojoExecutionException(
+                    "The project was created but (some of) the requested extensions couldn't be added.");
         }
     }
 
-    private void createGradleWrapper(File projectDirectory) {
+    private void createGradleWrapper(File projectDirectory, Properties props) {
         try {
-            Runtime.getRuntime().exec("gradle wrapper", new String[0], projectDirectory);
-        } catch (IOException e) {
+            String gradleName = IS_WINDOWS ? "gradle.bat" : "gradle";
+            ProcessBuilder pb = new ProcessBuilder(gradleName, "wrapper",
+                    "--gradle-version=" + ToolsUtils.getGradleWrapperVersion(props)).directory(projectDirectory)
+                            .inheritIO();
+            Process x = pb.start();
+
+            x.waitFor();
+
+            if (x.exitValue() != 0) {
+                getLog().warn("Unable to install the Gradle wrapper (./gradlew) in project. See log for details.");
+            }
+
+        } catch (InterruptedException | IOException e) {
             // no reason to fail if the wrapper could not be created
             getLog().error(
                     "Unable to install the Gradle wrapper (./gradlew) in the project. You need to have gradle installed to generate the wrapper files.",
@@ -193,7 +268,7 @@ public class CreateProjectMojo extends AbstractMojo {
 
     }
 
-    private void createMavenWrapper(File createdPomFile) {
+    private void createMavenWrapper(File createdPomFile, Properties props) {
         try {
             // we need to modify the maven environment used by the wrapper plugin since the project could have been
             // created in a directory other than the current
@@ -211,10 +286,10 @@ public class CreateProjectMojo extends AbstractMojo {
                     plugin(
                             groupId("io.takari"),
                             artifactId("maven"),
-                            version(MojoUtils.getMavenWrapperVersion())),
+                            version(ToolsUtils.getMavenWrapperVersion(props))),
                     goal("wrapper"),
                     configuration(
-                            element(name("maven"), MojoUtils.getProposedMavenVersion())),
+                            element(name("maven"), ToolsUtils.getProposedMavenVersion(props))),
                     executionEnvironment(
                             newProject,
                             newSession,
@@ -314,6 +389,10 @@ public class CreateProjectMojo extends AbstractMojo {
         }
     }
 
+    private boolean isClassNameValid(String className) {
+        return SourceVersion.isName(className) && !SourceVersion.isKeyword(className);
+    }
+
     private void sanitizeExtensions() {
         extensions = extensions.stream().filter(Objects::nonNull).map(String::trim).collect(Collectors.toSet());
     }
@@ -326,7 +405,7 @@ public class CreateProjectMojo extends AbstractMojo {
         getLog().info(ansi().a("Navigate into this directory and launch your application with ")
                 .bold()
                 .fg(Ansi.Color.CYAN)
-                .a("mvn compile quarkus:dev")
+                .a("mvn quarkus:dev")
                 .reset()
                 .toString());
         getLog().info(
@@ -336,17 +415,4 @@ public class CreateProjectMojo extends AbstractMojo {
         getLog().info("");
     }
 
-    private boolean isDirectoryEmpty(File dir) {
-        if (!dir.isDirectory()) {
-            throw new IllegalArgumentException("The specified file must be a directory: " + dir.getAbsolutePath());
-        }
-
-        String[] children = dir.list();
-        if (children == null) {
-            // IO Issue
-            throw new IllegalArgumentException("The specified directory cannot be accessed: " + dir.getAbsolutePath());
-        }
-
-        return children.length == 0;
-    }
 }
